put animation images in div

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,10 +12,16 @@
   border: 0;
 }
 
+.entrance {
+  max-width: 1000px;
+  margin: 20px auto;
+}
+
 .container {
   font-family: 'Montserrat', sans-serif;
   max-width: 1000px;
   padding: 20px;
+  margin: 0 auto;
 }
 
 h1,
