--- a/styles/style.css
+++ b/styles/style.css
@@ -112,10 +112,12 @@ a {
   z-index: 3
 }
 
-.firework {
+.red,
+.purple {
   position: absolute;
   z-index: 2;
 }
+
 
 /*===========================
 
@@ -126,17 +128,25 @@ a {
 ==============================*/
 
 .red {
-  width: 300px;
+  height: 200px;
   top: 15px;
-  animation: explode 5s linear infinite;
+  right: 180px;
+  animation: explode 3s linear infinite;
+}
+
+.purple {
+  height: 250px;
+  top: 25px;
+  left: 175px;
+  animation: explode 2.5s linear infinite;
 }
 
 
 @keyframes explode {
   from {
-    transform: translateZ(-100px);
+    transform: scale(0,0);
   }
   to {
-    transform: translateZ(100px);
+    transform: scale(1,1);
   }
 }
